# rpm-guide-greetapp

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
